[package]
name = "http_file_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", default-features = false, features = ["http1", "multipart", "original-uri"] }
axum-macros = { version = "0.2.3", default-features = false }
base64 = "0.13.1"
hyper = { version = "0.14.20", default-features = false, features = ["server"] }
libc = "0.2.135"
pin-project = "1.0.12"
readwrite = { version = "0.2.0", features = ["tokio"] }
tokio = { version = "1.21.2", features = ["rt", "net", "sync", "io-util", "fs", "process", "macros"] }
xflags = "0.3.1"
